--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-parallax": "^3.3.0"
   },
   "devDependencies": {
     "prettier": "2.3.2"
