--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-parallax": "^3.3.0"
+    "react-parallax": "^3.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "prettier": "2.3.2"
