--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
+    "use-breakpoint": "^2.0.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
