--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
+    "@zach.codes/react-calendar": "^0.3.1",
     "date-fns": "^2.23.0",
     "formik": "^2.2.9",
     "gatsby": "^3.11.1",
