--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.4.0",
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
     "use-breakpoint": "^2.0.1",
