--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-big-calendar": "^0.35.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.4.0",
     "react-helmet": "^6.1.0",
