--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "@zach.codes/react-calendar": "^0.3.1",
+    "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
+    "dayjs": "^1.10.7",
     "formik": "^2.2.9",
     "gatsby": "^3.11.1",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
