--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@zach.codes/react-calendar": "^0.3.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.23.0",
+    "datebook": "^7.0.1",
     "dayjs": "^1.10.7",
     "formik": "^2.2.9",
     "gatsby": "^3.11.1",
@@ -31,6 +32,7 @@
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-add-to-calendar-hoc": "^1.0.10",
     "react-big-calendar": "^0.35.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.4.0",
