add result pages and pdf embed

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
     "react-parallax": "^3.3.0",
+    "react-pdfobject": "^1.2.0",
     "use-breakpoint": "^2.0.1",
     "yup": "^0.32.9",
     "yup-phone": "^1.2.19"
