--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-offline": "^4.11.0",
     "gatsby-plugin-react-helmet": "^4.11.0",
     "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-remark-images-contentful": "^5.1.0",
     "gatsby-source-contentful": "^5.13.0",
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-transformer-sharp": "^3.11.0",
@@ -39,7 +40,6 @@
     "react-obfuscate": "^3.6.8",
     "react-parallax": "^3.3.0",
     "react-pdfobject": "^1.2.0",
-    "use-breakpoint": "^2.0.1",
     "yup": "^0.32.9",
     "yup-phone": "^1.2.19"
   },
