switch to a srr friendly mui phone input

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "gatsby-source-contentful": "^5.13.0",
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-transformer-sharp": "^3.11.0",
-    "material-ui-phone-number": "^2.2.6",
     "moment": "^2.29.1",
+    "mui-phone-input-ssr": "^1.2.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-big-calendar": "^0.35.0",
