--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.23.0",
     "datebook": "^7.0.1",
     "dayjs": "^1.10.7",
+    "deepmerge": "^4.2.2",
     "formik": "^2.2.9",
     "gatsby": "^3.11.1",
     "gatsby-plugin-gatsby-cloud": "^2.11.0",
@@ -22,7 +23,7 @@
     "gatsby-plugin-manifest": "^3.11.0",
     "gatsby-plugin-material-ui": "^3.0.1",
     "gatsby-plugin-offline": "^4.11.0",
-    "gatsby-plugin-react-helmet": "^4.11.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-remark-images-contentful": "^5.1.0",
     "gatsby-source-contentful": "^5.13.0",
