--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "react-parallax": "^3.3.0",
     "react-pdfobject": "^1.2.0",
     "yup": "^0.32.9",
-    "yup-phone": "^1.2.19"
-  },
+    "yup-phone": "^1.2.19",
+  "trim": ">=0.0.3",
+  "immer": ">=9.0.6",
+  "object-path": ">=0.11.8"
+},
   "devDependencies": {
     "prettier": "2.3.2"
   },
