--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-image": "^1.11.0",
     "gatsby-plugin-manifest": "^3.11.0",
     "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby-plugin-netlify": "^4.0.0",
     "gatsby-plugin-offline": "^4.11.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.11.0",
@@ -29,8 +30,10 @@
     "gatsby-source-contentful": "^5.13.0",
     "gatsby-source-filesystem": "^3.11.0",
     "gatsby-transformer-sharp": "^3.11.0",
+    "immer": ">=9.0.6",
     "moment": "^2.29.1",
     "mui-phone-input-ssr": "^1.2.4",
+    "object-path": ">=0.11.8",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-big-calendar": "^0.35.0",
@@ -41,12 +44,10 @@
     "react-obfuscate": "^3.6.8",
     "react-parallax": "^3.3.0",
     "react-pdfobject": "^1.2.0",
+    "trim": ">=0.0.3",
     "yup": "^0.32.9",
-    "yup-phone": "^1.2.19",
-  "trim": ">=0.0.3",
-  "immer": ">=9.0.6",
-  "object-path": ">=0.11.8"
-},
+    "yup-phone": "^1.2.19"
+  },
   "devDependencies": {
     "prettier": "2.3.2"
   },
