--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-obfuscate": "^3.6.8",
     "react-parallax": "^3.3.0",
     "react-pdfobject": "^1.2.0",
+    "segfault-handler": "^1.3.0",
     "trim": ">=0.0.3",
     "yup": "^0.32.9",
     "yup-phone": "^1.2.19"
