--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-netlify": "^4.0.0",
     "gatsby-plugin-offline": "^4.11.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
     "gatsby-plugin-sharp": "^3.11.0",
     "gatsby-remark-images-contentful": "^5.1.0",
     "gatsby-source-contentful": "^5.13.0",
