--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mui-phone-input-ssr": "^1.2.4",
     "object-path": ">=0.11.8",
     "prop-types": "^15.7.2",
+    "query-string": "^7.1.1",
     "react": "^17.0.1",
     "react-big-calendar": "^0.35.0",
     "react-dom": "^17.0.1",
