--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
     "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-query-params": "^1.3.0",
     "gatsby-remark-images-contentful": "^5.1.0",
     "gatsby-source-contentful": "^5.13.0",
     "gatsby-source-filesystem": "^3.11.0",
