--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "react-pdfobject": "^1.2.0",
     "segfault-handler": "^1.3.0",
     "trim": ">=0.0.3",
-    "yup": "^0.32.9",
-    "yup-phone": "^1.2.19"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "prettier": "2.3.2"
