--- a/package.json
+++ b/package.json
@@ -7,42 +7,42 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@date-io/moment": "^1.3.13",
+    "@emotion/react": "^11.10.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "classnames": "^2.3.1",
-    "date-fns": "^2.23.0",
+    "date-fns": "^2.29.3",
     "datebook": "^7.0.1",
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
     "formik": "^2.2.9",
-    "gatsby": "^3.11.1",
-    "gatsby-plugin-gatsby-cloud": "^2.11.0",
-    "gatsby-plugin-image": "^1.11.0",
-    "gatsby-plugin-manifest": "^3.11.0",
-    "gatsby-plugin-material-ui": "^3.0.1",
+    "gatsby": "^4.0.0",
+    "gatsby-plugin-image": "^3.0.0",
+    "gatsby-plugin-manifest": "~4.0.0",
+    "gatsby-plugin-material-ui": "^4.1.0",
     "gatsby-plugin-netlify": "^4.0.0",
     "gatsby-plugin-offline": "^4.11.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-sharp": "~4.0.0",
     "gatsby-plugin-sitemap": "^5.10.1",
     "gatsby-query-params": "^1.3.0",
     "gatsby-remark-images-contentful": "^5.1.0",
-    "gatsby-source-contentful": "^5.13.0",
-    "gatsby-source-filesystem": "^3.11.0",
-    "gatsby-transformer-sharp": "^3.11.0",
+    "gatsby-source-contentful": "~7.0",
+    "gatsby-source-filesystem": "~4.0",
+    "gatsby-transformer-sharp": "~4.0",
     "immer": ">=9.0.6",
     "moment": "^2.29.1",
     "mui-phone-input-ssr": "^1.2.4",
     "object-path": ">=0.11.8",
     "prop-types": "^15.7.2",
     "query-string": "^7.1.1",
-    "react": "^17.0.1",
-    "react-big-calendar": "^0.35.0",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.0",
+    "react-big-calendar": "^1.0.0",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^11.5.1",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
