--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@date-io/moment": "^1.3.13",
+    "@date-io/date-fns": "^2.0.0",
+    "@date-io/moment": "^2.0.0",
     "@emotion/react": "^11.10.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -18,31 +18,31 @@
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
     "formik": "^2.2.9",
-    "gatsby": "^4.0.0",
+    "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
-    "gatsby-plugin-manifest": "~4.0.0",
+    "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-material-ui": "^4.1.0",
-    "gatsby-plugin-netlify": "^4.0.0",
-    "gatsby-plugin-offline": "^4.11.0",
-    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-netlify": "^5.0.0",
+    "gatsby-plugin-offline": "^6.0.0",
+    "gatsby-plugin-react-helmet": "^6.0",
     "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "~4.0.0",
-    "gatsby-plugin-sitemap": "^5.10.1",
+    "gatsby-plugin-sharp": "^5.0.0",
+    "gatsby-plugin-sitemap": "^6.0.0",
     "gatsby-query-params": "^1.3.0",
-    "gatsby-remark-images-contentful": "^5.1.0",
-    "gatsby-source-contentful": "~7.0",
-    "gatsby-source-filesystem": "~4.0",
-    "gatsby-transformer-sharp": "~4.0",
+    "gatsby-remark-images-contentful": "^6.0",
+    "gatsby-source-contentful": "^8.0",
+    "gatsby-source-filesystem": "^5.0",
+    "gatsby-transformer-sharp": "^5.0",
     "immer": ">=9.0.6",
     "moment": "^2.29.1",
     "mui-phone-input-ssr": "^1.2.4",
     "object-path": ">=0.11.8",
     "prop-types": "^15.7.2",
-    "query-string": "^7.1.1",
-    "react": "^17.0.0",
+    "query-string": "^8.0",
+    "react": "^18.0.0",
     "react-big-calendar": "^1.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.2",
     "react-dropzone": "^14.2.3",
     "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
@@ -54,7 +54,7 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "prettier": "2.3.2"
+    "prettier": "2.8.1"
   },
   "keywords": [
     "gatsby"
