--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deepmerge": "^4.3.1",
     "formik": "^2.4.6",
     "gatsby": "^5.14.5",
+    "gatsby-adapter-netlify": "^1.2.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "~5.14.0",
     "gatsby-plugin-material-ui": "^4.1.0",
@@ -40,11 +41,9 @@
     "object-path": ">=0.11.8",
     "prop-types": "^15.8.1",
     "query-string": "^9.2.1",
-"react": "^18.0.0",
-"react-dom": "^18.0.0",
-
+    "react": "^18.0.0",
     "react-big-calendar": "^1.19.4",
-  
+    "react-dom": "^18.0.0",
     "react-dropzone": "^14.3.8",
     "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
